# aurora-sha256-poc

./: .gitignore  Cargo.toml  Makefile.toml  README.md
src/: lib.rs
